pointer events visible fix scroll thanks ivan

--- a/code/hud/FrostrialHUD.scss
+++ b/code/hud/FrostrialHUD.scss
@@ -1,5 +1,5 @@
 RootPanel {
-	pointer-events: all;
+	pointer-events: visible;
 	.HutIndicator {
 		position: absolute;
 		height: 100px;
